--- a/branches/of_to_rails3/app/views/images/show.html.erb
+++ b/branches/of_to_rails3/app/views/images/show.html.erb
@@ -1,1 +1,1 @@
-<img src="<%= url_for(:controller => :images,:action => "cached_image", :id => @image.id) %>"/>
+<img src="<%= cached_image_images_path(@image) %>"/>
