--- a/branches/of_to_rails3/app/views/layouts/no_frame.html.erb
+++ b/branches/of_to_rails3/app/views/layouts/no_frame.html.erb
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:doap="http://usefulinc.com/ns/doap#"
       xmlns:foaf="http://xmlns.com/foaf/0.1/"
-      xmlns:of="http://<%=SSO_HOST%>/ns#"
+      xmlns:of="<%=OPENFOUNDRY_ROOT_URL%>ns#"
       xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#"
       xml:lang="en" lang="en">
 <head>
