--- a/branches/of_to_rails3/app/views/news/list.html.erb
+++ b/branches/of_to_rails3/app/views/news/list.html.erb
@@ -7,18 +7,18 @@
   <%for news in @news %>
   <li class="news_list">
     <%if news.catid == 0%>
-      <%= link_to h(news.subject), site_news1_path(:id => news), :class => "news_subject" %>
+      <%= link_to h(news.subject), news_path(:id => news), :class => "news_subject" %>
     <%else%>
-      <%= link_to h(news.subject), news1_path(:id => news.id, :project_id => news.catid), :class => "news_subject" %>
+      <%= link_to h(news.subject), project_news_path(news.project, news), :class => "news_subject" %>
     <%end%>
     <%=tz_date(news.updated_at)%>
     <p>
-    <%= truncate(h(news.description.gsub(/<[^>]*>/,'')), 270, "...") %>
+    <%= truncate(h(news.description.gsub(/<[^>]*>/,'')), :length => 270) %>
     (
     <%if news.catid == 0%>
-      <%= link_to _('Read More'), site_news1_path(:id => news) %>
+      <%= link_to _('Read More'), news_path(:id => news) %>
     <%else%>
-      <%= link_to _('Read More'), news1_path(:id => news.id, :project_id => news.catid) %>
+      <%= link_to _('Read More'), project_news_path(news.project, news) %>
     <%end%>
     )
     </p>
@@ -31,9 +31,9 @@
 	      <%=_('Disabled')%>
       <% end %>
       <%if news.catid == 0%>
-        <%= link_to _('Edit'), edit_site_news1_path(:id => news) %>
+        <%= link_to _('Edit'), edit_news_path(:id => news) %>
       <%else%>
-        <%= link_to _('Edit'), edit_news1_path(:id => news, :project_id => news.catid) %>
+        <%= link_to _('Edit'), edit_project_news_path(:id => news, :project_id => news.catid) %>
       <%end%>
       <%= link_to _('Delete'), { :action => 'destroy', :id => news }, :confirm => _('Are you sure?'), :method => :delete %>
     </p>
@@ -46,5 +46,9 @@
 
 <br />
 <% if fpermit?("news", params[:project_id]) -%>
-<%= link_to _('Add News'), :action => 'new' %>
+  <% if @project %>
+    <%= link_to _('Add Project News'), :action => 'new' %>
+  <% else %>
+    <%= link_to _('Add News'), :action => 'new' %>
+  <% end %>
 <% end %>
