--- a/branches/of_to_rails3/app/views/survey/show.html.erb
+++ b/branches/of_to_rails3/app/views/survey/show.html.erb
@@ -1,6 +1,8 @@
 <% if files %>
 <ul>
-  <%=files.map{|f| '<li>'+f.path+'</li>'}%>
+  <% files.each do |f| %>
+    <li><%= f.path %></li>
+  <% end %>
 </ul>
 <%end%>
 
