--- a/branches/of_to_rails3/app/views/user_notify/change_email.html.erb
+++ b/branches/of_to_rails3/app/views/user_notify/change_email.html.erb
@@ -1,7 +1,7 @@
 <p>
 Dear User, this message is from <%= @app_name %><br />
 <br />
-You had change your email address on '<%=SSO_HOST%>/sso/user/edit'.<br />
+You had change your email address on '<%=OPENFOUNDRY_HOST%>/sso/user/edit'.<br />
 <br />
 <br />
 NOTICE!<br /> 
