--- a/branches/of_to_rails3/app/views/user_notify/test.text.html.rhtml
+++ b/branches/of_to_rails3/app/views/user_notify/test.text.html.rhtml
@@ -1,8 +1,8 @@
 <table>
   <tr>
     <td>
-<a href="http://<%=SSO_HOST%>/of">
-  <img src="http://<%=SSO_HOST%>/of/images/logo.gif" />
+<a href="http://<%=OPENFOUNDRY_HOST%>/of">
+  <img src="http://<%=OPENFOUNDRY_HOST%>/of/images/logo.gif" />
 </a>
 </td>
 </tr>
