--- a/branches/of_to_rails3/app/views/webhosting/index.html.erb
+++ b/branches/of_to_rails3/app/views/webhosting/index.html.erb
@@ -3,7 +3,7 @@
     <h4><a href="webhosting/how_to_upload">如何上傳檔案？</a></h4>
     <h4>什麼是網站代管(web hosting)服務?</h4>
     <p>
-    對於每個在 <a href="http://<%=SSO_HOST%>/of">OpenFoundry (<%=SSO_HOST%>)</a> 上開立的專案，
+    對於每個在 <a href="<%=OPENFOUNDRY_OF_URL%>">OpenFoundry (<%=OPENFOUNDRY_OF_URL%>)</a> 上開立的專案，
     我們提供網址為 <tt>http://[專案ID].openfoundry.org</tt> 的網頁空間，
     讓專案管理員可以自行放置與該專案相關的網頁，
     以便在專案管理上有更多的資源做更靈活的運用。
