--- a/branches/of_to_rails3/app/views/category/_project_select.html.erb
+++ b/branches/of_to_rails3/app/views/category/_project_select.html.erb
@@ -38,7 +38,8 @@
 		 							 :with => "'cat=' + escape( $( 'category_id' ).value ) + '&nsc_or_not=' + escape( $( 'is_nsc_validated' ).checked ) + '&cat_query=' + $( 'cat_query' ).value"
 	   # post both of select, checkbox, and search
    %>
-  &nbsp;<a href="<%="#{ root_path }openfoundry/search?adv_cat=&query=" %>"><%=t( 'Advanced Options' ) %></a>
+   &nbsp;
+   <%= link_to t('Advanced Options'), openfoundry_search_path(:adv_cat => 1) %>
   <img id="Search_Loading" width="15px" height="15px" src="../images/ajax-loader.gif" style="display:none"/>
 <br>
 </div>
