--- a/branches/of_to_rails3/app/views/citations/list.html.erb
+++ b/branches/of_to_rails3/app/views/citations/list.html.erb
@@ -7,7 +7,7 @@
 <ul>
   <%for data_item in @data_items %>
   <li>
-    <%= link_to h(data_item.project_title), citation_path(:id => data_item.id, :project_id => data_item.project_id) %>
+    <%= link_to h(data_item.project_title), project_citation_path(data_item.project, data_item) %>
     <%=data_item.updated_at.strftime("(%Y/%m/%d)")%>
     <% if fpermit?("citation", params[:project_id]) -%>
     <p>
