--- a/branches/of_to_rails3/app/views/layouts/rt.html.erb
+++ b/branches/of_to_rails3/app/views/layouts/rt.html.erb
@@ -1,4 +1,4 @@
-<% inside_layout 'application' do -%>
+<% content_for :module do -%>
   <% module_title = h(@module_name) %>
   <% module_tabs = capture do -%>
             <div id="module_nav_tab">
@@ -27,3 +27,4 @@
   <% end -%>
   <%= render :file => 'layouts/rt_module', :locals => {:module_title => module_title, :module_tabs =>module_tabs, :module_content => module_content, :variation => 'square1'}  %>
 <% end -%>
+<%= render :file => 'layouts/application'%>
