--- a/branches/of_to_rails3/app/views/news/_form.html.erb
+++ b/branches/of_to_rails3/app/views/news/_form.html.erb
@@ -5,9 +5,10 @@
 <%= text_field 'news', 'subject' %></p>
 
 <% if fpermit?("site_admin", nil) && params[:project_id].nil? -%>
-<%= javascript_include_tag 'fckeditor/fckeditor.js' %>
-<div id="<%= fckeditor_div_id('news', 'description') %>">
-    <%= fckeditor_textarea( "news", "description", :height => 400 ) %> 
+<%= javascript_include_tag :ckeditor %>
+<!--<div id="<%#= ckeditor_div_id('news', 'description') %>">-->
+<div id="123">
+    <%= ckeditor_textarea( "news", "description", :height => 400 ) %> 
 </div>
 <% else %>
 <p><label for="news_descr"><%=_('Description')%></label><br/>
