--- a/branches/of_to_rails3/app/views/news/_home_news.html.erb
+++ b/branches/of_to_rails3/app/views/news/_home_news.html.erb
@@ -11,8 +11,7 @@
   <% for news in newsList -%>
     <li>
     <%= if news.created_at > 7.days.ago then image_tag('hot.png') end %>
-    <%= link_to news.subject, 
-        site_news1_path(:id => news.id), :class => "news_subject" %>
+    <%= link_to news.subject, news_path(news), :class => 'news_subject' %>
     <%= news.created_at.strftime "%Y-%m-%d" %>
     </li>
     <% if showDescr == true -%>
@@ -23,7 +22,7 @@
     <%i=i+1%>
   <% end -%>
 </ul>
-<%=link_to( _('More...'), site_news_path, :class => "more" )%>
+<%=link_to( _('More...'), news_index_path, :class => "more" )%>
 <%= auto_discovery_link_tag(:rss,
                             rss_path(:format => :rss, :cont => 'site_news'),
                             {:title => s_("Feed|#{_('OpenFoundry News')} RSS Feed")}) %>
