--- a/branches/of_to_rails3/app/views/news/_listn.html.erb
+++ b/branches/of_to_rails3/app/views/news/_listn.html.erb
@@ -9,14 +9,12 @@
 <ul>
   <%for news in newsList -%>
   <li>
-    <%= link_to( 
-	h(news.project.summary + ' - ' + news.subject), 
-	news1_path(:id => news.id, :project_id => news.catid) )%>
+    <%= link_to(h(news.project.summary + ' - ' + news.subject), project_news_path(news.project, news)) %>
     <%= news.updated_at.strftime "%Y-%m-%d" %>
   </li>
   <%end -%>
 </ul>
-<%=link_to _('More...'), project_news_path(), :class => "more" %>
+<%= link_to _('More...'), home_project_news_path(), :class => "more" %>
 <%=auto_discovery_link_tag(:rss,
    {:controller => :rss, :format => :rss, :cont => 'project_news'},
    {:title => s_("Feed|#{ _( 'Project News' ) } RSS Feed") } ) %>
