--- a/branches/of_to_rails3/app/views/nscreports/index.html.erb
+++ b/branches/of_to_rails3/app/views/nscreports/index.html.erb
@@ -18,14 +18,14 @@
 
 Reports:<br>
 <% reports.each do |f| %>
-  <a href="<%=nscreports_path(:project_id => @project.id, :file => f)%>"><%=f%></a><br/>
+  <a href="<%= project_nscreports_path(@project, :file => f)%>"><%=f%></a><br/>
 <% end %>
 
 <br/>
 
 Reviews:<br>
 <% reviews.each do |f| %>
-  <a href="<%=nscreports_path(:project_id => @project.id, :file => f)%>"><%=f%></a><br/>
+  <a href="<%= project_nscreports_path(@project, :file => f)%>"><%=f%></a><br/>
 <% end %>
 
 <hr>
