--- a/branches/of_to_rails3/app/views/partials/_qrcode_project.html.erb
+++ b/branches/of_to_rails3/app/views/partials/_qrcode_project.html.erb
@@ -1,7 +1,7 @@
 <% module_content = capture do -%>
 <div id="qr">
   <center>
-    <%= qrcode("http://www.openfoundry.org/of/projects/#{@project.id}", 2, 6) %>
+    <%=raw qrcode("#{request.protocol}#{OPENFOUNDRY_HOST}#{root_path}/projects/#{@project.id}", 2, 6, h(@project.summary)) %>
     <%= h(@project.name) %>
   </center>
 </div>
