--- a/branches/of_to_rails3/app/views/references/list.html.erb
+++ b/branches/of_to_rails3/app/views/references/list.html.erb
@@ -6,7 +6,7 @@
 <ul>
   <%for data_item in @data_items %>
   <li>
-    <%= link_to h(data_item.source[0..150]) + "...", reference_path(:id => data_item.id, :project_id => data_item.project_id) %>
+    <%= link_to h(data_item.source[0..150]) + "...", project_reference_path(data_item.project, data_item) %>
     <%=data_item.updated_at.strftime("(%Y/%m/%d)")%>
     <% if fpermit?("reference", params[:project_id]) -%>
     <p>
