--- a/branches/of_to_rails3/app/views/releases/_file_view.html.erb
+++ b/branches/of_to_rails3/app/views/releases/_file_view.html.erb
@@ -13,23 +13,19 @@
 <td> <%= number_to_human_size(@file.size) %> </td>
 </tr>
 </table>
-        <%= link_to_remote '[Edit]',:url => editfile_release_url({
+        <%= link_to  _('[Edit]'), editfile_project_release_path({
             :project_id => @project.id,
             :id => @release.id,
             :editfile_id => @file.id,
             :div_id => params[:div_id],
-          }), :update => params[:div_id]
+        }), :remote => true, :update => params[:div_id]
         %>
-        <%= link_to_remote '[Remove]',:url => removefile_release_url({
+        <%= link_to_remote _('[Delete]'),:url => removefile_project_release_path({
             :project_id => @project.id,
             :id => @release.id,
             :removefile_id => @file.id
           }),
           :confirm => 'Delete?', 
           :update => "uploadfiles_view"
-        %>
-	<%= link_to '[Download]', download_url(:project_name => @project.name, 
-					       :release_version => @release.version,
-					       :file_name => @file.path )
         %>
     </div>
