--- a/branches/of_to_rails3/app/views/releases/_top_download_list.html.erb
+++ b/branches/of_to_rails3/app/views/releases/_top_download_list.html.erb
@@ -11,9 +11,9 @@
 <% for release in releases %>
  <%if i % 2 == 0; class_name="odd"; else; class_name="even"; end; -%>
   <tr class="<%= class_name %>">
-    <td><img src="<%= url_for(:controller => :images,:action => "cached_image", :id => "#{Project.find(release.project_id).icon}_16") %>"/></td>
+    <td><img src="<%= cached_image_images_path(:id => "#{Project.find(release.project_id).icon}_16") %>"/></td>
     <td><%= (i+=1).to_s %></td>
-    <td><%= link_to h(release.project.summary), download1_path(:project_id => release.project_id) %></td>
+    <td><%= link_to h(release.project.summary), project_download_path(:project_id => release.project_id) %></td>
     <td><%= release.created_at.strftime("%Y/%m/%d") if !release.due.nil? %></td>
   </tr>
 <% end %>
