--- a/branches/of_to_rails3/app/views/releases/download.html.erb
+++ b/branches/of_to_rails3/app/views/releases/download.html.erb
@@ -7,37 +7,39 @@
     %>
     <tr>
       <th style="text-align: left">
-        <B><%= "<a name=\"#{h(release.version)}\"></a>" + 
-          h(release.version) + 
-          " (" + due + ")" %>
-        </B>
+        <div style="float: right">
+          <% if @permissions.include?(:survey) %>
+            <%= link_to s_('survey|Downloader Reviews'), release_review_path(@project.id, release.version) %>
+          <% end %>
+        </div>
+        <B><%= tag(:a, :name => release.version) %> <%= h(release.version) %> (<%= due %>)</B>
       </th>
-      <% if @permissions.include?(:survey) %>
-        <th style="text-align: right;">
-          <%= link_to s_('survey|Downloader Reviews'),
-            release_review_path(@project.id, release.version) %>
-        </th>
-      <% end %>
     </tr>
     <% @files = release.fileentity %>
     <% @files.each do |file| %>
     <tr>
-      <td><b><%= link_to h(file.path), download_url(:project_name => @project_name, 
-					       :release_version => release.version,
-					       :file_name => file.path ) %></b><br/>
-      <%= "#{number_to_human_size(file.size)}, " + _("Downloads Hits") + file.file_counter.to_s %><br/>
-        <%= h(file.description) %>
+      <td>
+        <div style="float: right">
+          <% if @permissions.include?(:survey)%>
+            <%= link_to s_('survey|Downloader Reviews'), file_review_path(@project.id, release.version, file.path) %>
+          <% end %>
+          <a href="javascript:" class="toggle-description" data-file-id="<%= file.id %>">
+            <%= s_('survey|Toggle Description') %>
+          </a>
+        </div>
+        <b><%= link_to h(file.path), download_url(:project_name => @project_name, 
+                                                  :release_version => release.version,
+                                                  :file_name => file.path ) %></b><br/>
+               <div id="file-<%= file.id %>" class="description" style="display: none">
+          <%= "#{number_to_human_size(file.size)}, " + _("Downloads Hits") + file.file_counter.to_s %><br/>
+          <%= h(file.description) %>
+        </div>
       </td>
-      <% if @permissions.include?(:survey)%>
-        <td style="text-align: right;">
-          <%= link_to s_('survey|Downloader Reviews'), 
-            file_review_path(@project.id, release.version, file.path) %>
-        </td>
-      <% end %>
     </tr>
     <% end %>
   <% end %>
   </table>
+  <%= will_paginate @releases %>
 </div>
 <% if @rdr_download_url %>
   <script>
