--- a/branches/of_to_rails3/app/views/releases/new.html.erb
+++ b/branches/of_to_rails3/app/views/releases/new.html.erb
@@ -5,7 +5,7 @@
 <td><%= text_field(:release, :version, :size => 20) %></td>
 </tr>
 <tr><th><%= Release.columns_hash['due'].human_name  -%> : </th>
-<td><%= text_field(:release, :due, :size => 20) %><img alt="Calendar" class="calendar-trigger" id="release_due_trigger" src="http://<%=SSO_HOST%>/of/images/calendar.gif" /><script type="text/javascript">
+<td><%= text_field(:release, :due, :size => 20) %><img alt="Calendar" class="calendar-trigger" id="release_due_trigger" src="<%=OPENFOUNDRY_OF_URL%>images/calendar.gif" /><script type="text/javascript">
     //<![CDATA[
 Calendar.setup({inputField : 'release_due', ifFormat : '%Y-%m-%d', button : 'release_due_trigger' });
 //]]>
