--- a/branches/of_to_rails3/app/views/site_admin/site_admin/edit_code.html.erb
+++ b/branches/of_to_rails3/app/views/site_admin/site_admin/edit_code.html.erb
@@ -24,8 +24,7 @@ end
 <% end %>
 
 <% url = "http://#{request.env["SERVER_NAME"]}:%d#{url_for(:action => 'run_code')}" %>
-<script type="text/javascript" src="/javascripts/jquery.js"></script>
-<script type="text/javascript">
+<% content_for :ujs do %>
 jQuery.noConflict();
 function trigger_run_code()
 {
@@ -33,7 +32,7 @@ function trigger_run_code()
   jQuery('#blah').append('<iframe src="<%= url % port %>"></iframe>');
 <% end %>
 }
-</script>
+<% end %>
 
 
 <button onclick="trigger_run_code()">Run!</button>
