--- a/branches/of_to_rails3/app/views/survey/index.html.erb
+++ b/branches/of_to_rails3/app/views/survey/index.html.erb
@@ -29,13 +29,13 @@
   <input type="button" value="<%= s_('survey|Remove') %>" onclick="removeSurvey();">
   <input type="button" value="<%= s_('survey|Reset') %>" onclick="resetSurvey();">
   <div class="" id="ProjectSurvey" style="overflow:auto; height:360px;">
-    <%= render :file => 'app/views/survey/show.html.erb', :layout => false,
+    <%= render :file => 'app/views/survey/show.html.erb', :layout => nil,
       :locals => {:survey_items => @survey_items, :item_status => @item_status,
         :files => @files, :resource => @resource,:prompt => ''}%>
   </div>
 </fieldset>
 <script>
-  var survey_path = '<%=project_path(:id => @project)%>/survey/';
+  var survey_path = '<%= project_survey_index_path(@project) %>/';
   function reloadSurvey(){
     $("Survey_Loading").show();
     ids = collectFileID();
@@ -72,7 +72,7 @@
     resource=collectResource();
     _prompt=$$("textarea.SurveyPrompt")[0].value
     //alert(resource);
-    new Ajax.Updater('ProjectSurvey', survey_path+ids+'/update', {method:'post', asynchronous:false, evalScripts:true, parameters:'?resource='+resource+'&prompt='+_prompt});
+    new Ajax.Updater('ProjectSurvey', survey_path+ids, {method:'put', asynchronous:false, evalScripts:true, parameters:'?resource='+resource+'&prompt='+_prompt});
     $("Survey_Loading").hide();
   }
   function collectFileID(){
