--- a/branches/of_to_rails3/app/views/user/_myissues.html.erb
+++ b/branches/of_to_rails3/app/views/user/_myissues.html.erb
@@ -3,30 +3,28 @@
     rss_sort_count = 0
     if rss and not rss.items.blank?
       rss.items.each do | item |
-      rss_sort[item.description.to_s + 'Q' + rss_sort_count.to_s]={
-      :dc_description=>item.dc_description,
-      :link=>item.link,
-      :title=>item.title,
-      :dc_date=>item.dc_date,
-      :dc_creator=>item.dc_creator,
-      :dc_description=>item.dc_description,
-      :description=>item.description}
-      rss_sort_count =rss_sort_count + 1
+        rss_sort[item.description.to_s + 'Q' + rss_sort_count.to_s]={
+        :dc_description=>item.dc_description,
+        :link=>item.link,
+        :title=>item.title,
+        :dc_date=>item.dc_date,
+        :dc_creator=>item.dc_creator,
+        :dc_description=>item.dc_description,
+        :description=>item.description}
+        rss_sort_count =rss_sort_count + 1
       end
     end
 %>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
-<script type="text/javascript">
-  jQuery.noConflict();
-  jQuery(function(){
-     jQuery(".ticket_button").click(function(){
-       jQuery("table#ticket_list tr:gt(9)").toggle("middle");
-       jQuery("p a.ticket_button").toggle();
+<% content_for :ujs do %>
+  jQuery(function($){
+     $(".ticket_button").click(function(){
+       $("#ticket_list .ticket:gt(4)").toggle();
+       $("p a.ticket_button").toggle();
      });
-     jQuery("#less_ticket").hide();
-     jQuery("table#ticket_list tr:gt(9)").hide();
+     $("#less_ticket").hide();
+     $("#ticket_list .ticket:gt(4)").hide();
   });  
-</script>
+<% end %>
 
 <% module_title = capture do -%>
   <%=_( 'menu_My Tickets' ) %>
@@ -43,31 +41,28 @@
 
 <a id="mytickets"></a>
 <% module_content = capture do -%>
-<% if rss_sort and not rss_sort.blank? %>
-    <table id="ticket_list">
-			<% rss_sort.sort.each {| key, item | %>
-				<tr><td><span class="severity <%=h item[:description] %>">
-							<% if not item[:description].blank? %>
-								<%= h item[:description] %>
-							<%else%>
-		 						P6
-							<%end%>
-</span><a href="http://<%=SSO_HOST %>/of/projects/<%=item[:dc_description] %>/rt/<%=item[:link] %>"><%=h item[:title] %></a></td></tr>
-
-        <tr>
-          <td>
-						Created&nbsp;<%=tz_date( item[:dc_date] ) %>&nbsp;&nbsp;
-            by&nbsp;<%=h item[:dc_creator] %>&nbsp;&nbsp;
-            Project:&nbsp;<span class="pa"><%=link_to item[:dc_description], "#{ root_path }projects/#{ item[:dc_description] }/rt" %></span>
-          </td>
-        </tr>
-			<% } %>
-    </table>
+  <% if rss_sort and not rss_sort.blank? %>
+    <div id="ticket_list">
+      <% rss_sort.sort.each {| key, item | %>
+        <div class="ticket">
+          <span class="severity <%=h item[:description] %>">
+            <% if not item[:description].blank? %>
+              <%= h item[:description] %>
+            <%else%>
+              P6
+            <%end%>
+          </span><a href="<%="#{request.protocol}#{OPENFOUNDRY_HOST}#{root_path}"%>/projects/<%=item[:dc_description] %>/rt/<%=item[:link] %>"><%=h item[:title] %></a><br/>
+          Created&nbsp;<%=tz_date( item[:dc_date] ) %>&nbsp;&nbsp;
+          by&nbsp;<%=h item[:dc_creator] %>&nbsp;&nbsp;
+          Project:&nbsp;<span class="pa"><%=link_to item[:dc_description], "#{ root_path }/projects/#{ item[:dc_description] }/rt" %></span>
+        </div>
+      <% } %>
+    </div>
     <p>
     <%=link_to _('More...'), "#", :class => "more ticket_button" %>
     <%=link_to _('Less...'), "#", :class => "more ticket_button",:id=>"less_ticket" %>
     </p>
-<% else %>
+  <% else %>
     Sorry, there is no data for your request.
   <% end %>
 <% end %>
